[tool.poetry]
name = "test-coderabbit"
version = "0.1.0"
description = ""
authors = ["y-tsuritani"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.34.65"
loguru = "^0.7.2"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = [
  ".git",
  ".mypy_cache",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".venv",
  ".vscode",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "venv",
]
line-length = 88
indent-width = 4
select = ["ALL"]
# select = ["E", "F", "UP", "B", "SIM", "I"]
ignore = [
  "D",
  "PLR0913",
  "ANN002",
  "ANN003",
  "ANN101",
  "W191",
  "E111",
  "E114",
  "E117",
  "D206",
  "D300",
  "G004",
  "Q000",
  "Q001",
  "Q002",
  "Q003",
  "COM812",
  "COM819",
  "ISC001",
  "ISC002",
  "INP001",
]
target-version = "py310"
# fixable = ["ALL"]
fixable = ["E", "F", "UP", "B", "SIM", "I"]
unfixable = ["F401", "T201"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.per-file-ignores]
"tests/**/*.py" = ["S101", "ANN201", "N802", "ARG"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-line-length = "dynamic"
